--- a/src/app/updown-form/updown-form.component.html
+++ b/src/app/updown-form/updown-form.component.html
@@ -13,8 +13,14 @@
     </div>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <mat-form-field class="updown-full-width">
+        <!-- <mat-form-field class="updown-full-width">
           <input [(ngModel)]="model.newBundle" name="newBundle" matInput placeholder="New Package Requested" >
+        </mat-form-field> -->
+        <mat-form-field class="updown-full-width">
+          <input [(ngModel)]="model.newBundle" name="newBundle" matInput placeholder="New Package Requested" [matAutocomplete]="requested">
+          <mat-autocomplete #requested="matAutocomplete">
+              <mat-option *ngFor="let package of packages" [value]="package.name">{{ package.name }}</mat-option>
+          </mat-autocomplete>
         </mat-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
