Change Massy Communications to Amplia communication in the highspeed template

--- a/src/app/highspeed-form/highspeed-form.component.html
+++ b/src/app/highspeed-form/highspeed-form.component.html
@@ -41,16 +41,16 @@
         <mat-form-field class="highspeed-full-width">
           <textarea #highspeed matInput matTextareaAutosize readonly>Dear {{model.cusname}},
 
-Thank you for contacting us at Massy Communications.
+Thank you for contacting us at Amplia Communications.
 
 My name is {{user.title}} {{user.lastname}} and I would be assisting with your query.
 
 {{model.info}}
 
-Thank you for choosing Massy Communications.
+Thank you for choosing Amplia Communications.
 
 Kind regards,
-{{user.firstname}} {{user.lastname}} on behalf of Massy Communications Customer Care Team</textarea>
+{{user.firstname}} {{user.lastname}} on behalf of Amplia Communications Customer Care Team</textarea>
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions>
