--- a/src/app/headerbar/headerbar.component.html
+++ b/src/app/headerbar/headerbar.component.html
@@ -6,18 +6,25 @@
     <mat-icon>home</mat-icon>  
   </button>
 
-  <button mat-icon-button [matMenuTriggerFor]="menu">
+  <button mat-icon-button [matMenuTriggerFor]="mapmenu">
+    <mat-icon>map</mat-icon>
+  </button>
+  <mat-menu #mapmenu="matMenu">
+    <button mat-menu-item (click)="feederMap()">
+      <mat-icon>place</mat-icon>
+      <span>Feeder Map</span>
+    </button>
+    <button mat-menu-item (click)="surepayMap()">
+      <mat-icon>place</mat-icon>
+      <span>Surepay Map</span>
+    </button>
+  </mat-menu>
+
+  <!-- <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="feederMap()">
-        <mat-icon>place</mat-icon>
-        <span>Feeder Map</span>
-      </button>
-      <button mat-menu-item (click)="surepayMap()">
-        <mat-icon>place</mat-icon>
-        <span>Surepay Map</span>
-      </button>
+      
       <button mat-menu-item disabled (click)="openDialog()">
         <mat-icon>account_circle</mat-icon>
         <span>Contact List</span>
@@ -30,5 +37,5 @@
         <mat-icon>monetization_on</mat-icon>
         <span>Bundle Calculator</span>
       </button>
-    </mat-menu>  
+    </mat-menu>   -->
 </mat-toolbar>
