updated the port forwarding template

--- a/src/app/forwarding-form/forwarding-form.component.css
+++ b/src/app/forwarding-form/forwarding-form.component.css
@@ -1,3 +1,17 @@
 .forward-full-width {
   width: 100%;
 }
+
+example-radio-group {
+  display: inline-flex;
+  flex-direction: row;
+}
+
+.example-radio-button {
+  /* width: 80%; */
+  margin-right: 40px;
+}
+
+.example-selected-value {
+  margin: 50px 0;
+}
