--- a/src/app/forwarding-form/forwarding-form.component.html
+++ b/src/app/forwarding-form/forwarding-form.component.html
@@ -4,8 +4,19 @@
 <br>
 <div fxLayout="row">
   <div fxFlexOffset="5%" fxFlex="45%">
-    <form #portForwarding="ngForm">
-      <h4 class="mat-h4">1. What are the ports that you need forwarded and to what IP address or addresses?</h4>
+    <!-- <form #portForwarding="ngForm"> -->
+      <div fxLayout="column">
+        <h2 class="mat-h4">*Primary Option (Bridge Port Request)</h2>
+        <h4 class="mat-h4">1. What LAN Port is the Device connected to on the ONT?</h4>
+        <mat-radio-group class="example-radio-group" [(ngModel)]="model.lan">
+            <mat-radio-button class="example-radio-button" *ngFor="let lan of lans" [value]="lan">
+              {{lan}}
+            </mat-radio-button>
+          </mat-radio-group>
+      </div>
+      <br>
+      <h2 class="mat-h4">*Secondary Option (Port Forwarding Request) </h2>
+      <h4 class="mat-h4">2. What are the ports that you need forwarded and to what IP address or addresses?</h4>
       <table class="forward-full-width" cellspacing="2"><tr>
           <td><mat-form-field class="forward-full-width" id="ports">
             <input [(ngModel)]="model.ports" name="ports" matInput placeholder="Ports" >
@@ -16,37 +27,42 @@
         </tr></table>
       <p>
         <mat-form-field class="forward-full-width">
-          <textarea [(ngModel)]="model.dmz" name="dmz" matInput matTextareaAutosize placeholder="2. If it’s a DMZ request, what is the IP address that you need in the DMZ?"></textarea>
+          <textarea [(ngModel)]="model.dmz" name="dmz" matInput matTextareaAutosize placeholder="3. If it’s a DMZ request, what is the IP address that you need in the DMZ?"></textarea>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field class="forward-full-width">
-          <textarea [(ngModel)]="model.connectedONT" name="ONT" matInput matTextareaAutosize placeholder="3. Is the DVR directly connected to the ONT?"></textarea>
+          <textarea [(ngModel)]="model.connectedONT" name="ONT" matInput matTextareaAutosize placeholder="4. Is the DVR directly connected to the ONT?"></textarea>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field class="forward-full-width">
-          <textarea [(ngModel)]="model.staticIP" name="staticIP" matInput matTextareaAutosize placeholder="4. If Yes to question 3, then did you set a static IP address on the DVR or is it DHCP?"></textarea>
+          <textarea [(ngModel)]="model.staticIP" name="staticIP" matInput matTextareaAutosize placeholder="5. If Yes to question 3, then did you set a static IP address on the DVR or is it DHCP?"></textarea>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field class="forward-full-width">
-          <textarea [(ngModel)]="model.router" name="router" matInput matTextareaAutosize placeholder="5. If No to question 3, then is it connected to a router or switch?"></textarea>
+          <textarea [(ngModel)]="model.router" name="router" matInput matTextareaAutosize placeholder="6. If No to question 3, then is it connected to a router or switch?"></textarea>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field class="forward-full-width">
-          <textarea [(ngModel)]="model.routerIP" name="routerIP" matInput matTextareaAutosize placeholder="6. If DVR is connected directly to a router, then we need the IP address of the router and the ports?"></textarea>
+          <textarea [(ngModel)]="model.routerIP" name="routerIP" matInput matTextareaAutosize placeholder="7. If DVR is connected directly to a router, then we need the IP address of the router and the ports?"></textarea>
         </mat-form-field>
       </p>
-    </form>
+    <!-- </form> -->
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
     <mat-card>
       <mat-card-title>{{title}} Template Preview</mat-card-title>
       <mat-card-content>
         <mat-form-field class="forward-full-width">
-          <textarea #forward matInput matTextareaAutosize readonly>What are the ports that you need forwarded and to what IP address or addresses?
+          <textarea #forward matInput matTextareaAutosize readonly>*Primary Option (Bridge Port Request)
+What LAN Port is the Device connected to on the ONT?
+{{ model.lan }}
+
+*Secondary Option (Port Forwarding Request)
+What are the ports that you need forwarded and to what IP address or addresses?
 Ports: {{model.ports}}    IP Address: {{ model.ipaddress }}
 
 If it’s a DMZ request, what is the IP address that you need in the DMZ?
