--- a/src/app/technical-voice/technical-voice.component.html
+++ b/src/app/technical-voice/technical-voice.component.html
@@ -1,3 +1,77 @@
-<p>
-  technical-voice works!
-</p>
+<headerbar>
+    <span title>{{title}}</span>
+  </headerbar>
+<br>
+<div fxLayout="row">
+  <div fxFlexOffset="5%" fxFlex="45%">
+    <div fxLayout="column">
+      <mat-slide-toggle [(ngModel)]="model.software">Does the ONT has the latest software 3FE56773AFHA98?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.xml">Is the xml file on the ONT (seen on AMS as SN.xml)?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.preconfig">Is the preconfig file on the ONT (PREMASSY004)?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.pots">Is the POTs port created on the AMS?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.mac">Is a mac address learned under the virtual UNI?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.dhcp">Is a DHCP IP assigned?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.tel1">Is the phone connected to TEL1?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.handset">What is seen on the handset?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.registered">Is the phone number registered on the ONT GUI?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.make">Could the customer make calls from the phone?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.receive">Could the customer receive calls on the phone?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.dunned">Is the customer listed as DUNNED?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.uni">Was the Virtual UNI Locked and Unlocked?</mat-slide-toggle>
+      <br>
+      <mat-slide-toggle [(ngModel)]="model.voip">Was the VoIP Service Locked and Unlocked?</mat-slide-toggle>
+    </div>
+  </div>
+  <div fxFlexOffset="5%" fxFlex="44%">
+    <mat-card>
+      <mat-card-title>{{title}} Template Preview</mat-card-title>
+      <mat-card-content>
+        <mat-form-field class="tech-voice-full-width">
+          <textarea #security matInput matTextareaAutosize readonly>1. Does the ONT has the latest software 3FE56773AFHA98?: {{model.software}}
+
+2. Is the xml file on the ONT (seen on AMS as SN.xml)?: {{model.xml}}
+
+3. Is the preconfig file on the ONT (PREMASSY004)?: {{model.preconfig}}
+
+4. Is the POTs port created on the AMS?: {{model.pots}}
+
+5. Is a mac address learned under the virtual UNI?: {{model.mac}}
+
+6. Is a DHCP IP assigned?: {{model.dhcp}}
+
+7. Is the phone connected to TEL1?: {{model.tel1}}
+
+8. What is seen on the handset?: {{model.handset}}
+
+9. Is the phone number registered on the ONT GUI?: {{model.registered}}
+
+10. Could the customer make calls from the phone?: {{model.make}}
+
+11. Could the customer receive calls on the phone?: {{model.receive}}
+
+12. Is the customer listed as DUNNED?: {{model.dunned}}
+
+13. Was the Virtual UNI Locked and Unlocked?: {{model.uni}}
+
+14. Was the VoIP Service Locked and Unlocked?: {{model.voip}}</textarea>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [ngxClipboard]='security'>COPY</button>
+        <button mat-button (click)="reset()">CLEAR</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
