--- a/src/app/security/security.component.html
+++ b/src/app/security/security.component.html
@@ -36,7 +36,7 @@
         <div fxLayout="row">
           <div fxFlex="49%">
             <mat-form-field class="security-full-width">
-                <input [(ngModel)]="model.contactName" name="contactName" matInput placeholder="Contact Name" >
+                <input [(ngModel)]="model.contactname" name="contactName" matInput placeholder="Contact Name" >
               </mat-form-field>
           </div>
           <div fxFlexOffset="2%" fxFlex="49%">
@@ -110,7 +110,7 @@ Address: {{model.address}}
                   
 ID #: {{model.id}}
                   
-Primary Contact Name: {{model.contactName}}
+Primary Contact Name: {{model.contactname}}
                   
 Primary Contact #: {{model.primaryContact}}
   
