Completed technical voice template

--- a/src/app/technical-voice/technical-voice.component.css
+++ b/src/app/technical-voice/technical-voice.component.css
@@ -1,3 +1,21 @@
 .tech-voice-full-width {
     width: 100%;
   }
+
+.tech-slider {
+  margin-bottom: 10px;
+}
+
+example-radio-group {
+  display: inline-flex;
+  flex-direction: row;
+}
+
+.example-radio-button {
+  /* width: 80%; */
+  margin-right: 40px;
+}
+
+.example-selected-value {
+  margin: 50px 0;
+}
