Added secret to template

--- a/src/app/technical-form/technical-form.component.css
+++ b/src/app/technical-form/technical-form.component.css
@@ -1,3 +1,10 @@
 .technical-full-width {
   width: 100%;
 }
+
+[aria-hidden="true"] {
+  opacity: 0;
+  position: absolute;
+  z-index: -9999;
+  pointer-events: none;
+}
