Added links to commonly used applications in work

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,15 +6,35 @@
   <div fxLayout="row" fxLayoutAlign="center">
     <h1 class="mat-display-2">Welcome</h1>
   </div>
-  <div fxLayout="column" fxFlex="50%" fxLayoutAlign="center">
-    <!-- TODO: landing page -->
-      <!-- <p>This website was created to assist the professionals in the creation of cases.</p>
-
-      <p>On the left are all the case templates that are currently mandatory to be used for cases or when responding in the High Speed email account</p> -->
-    </div> 
+  <div fxLayout="row" fxLayoutAlign="center" fxFlex="80%">
+    <mat-card>
+      <mat-card-title>Applications and Utilities</mat-card-title>
+      <div fxLayout="row">
+        <div fxLayout="row" fxFlex="49%">
+          <mat-nav-list>
+            <a mat-list-item href="https://login.microsoftonline.com" target="_blank"> <mat-icon matListIcon>mail</mat-icon>EMAIL</a>
+            <a mat-list-item href="http://mcl-vm2-crm/MassyCommunicationsLtd/main.aspx#849628433" target="_blank"><mat-icon matListIcon>contacts</mat-icon>CRM</a>
+            <a mat-list-item href="http://tableau.massycommunications.com/" target="_blank"><mat-icon matListIcon>work</mat-icon>TABLEAU</a>
+            <a mat-list-item href="http://provisioning.massycommunications.com:8080/webclient/" target="_blank"><mat-icon matListIcon>build</mat-icon>DLO</a>
+          </mat-nav-list>
+        </div>
+        <div fxLayout="row" fxFlex="49%" fxFlexOffset="2%">
+          <mat-nav-list>        
+            <a mat-list-item href="https://fieldservice.massycommunications.com/dispatchFS/" target="_blank"><mat-icon matListIcon>local_shipping</mat-icon>FIELD SERVICE</a>
+            <a mat-list-item href="https://garfield.massycommunications.com/MCL_610/getPhoneNumber/1" target="_blank"><mat-icon matListIcon>call</mat-icon> GARFIELD</a>
+            <a mat-list-item href="https://citrix-access.tstt.co.tt/" target="_blank"><mat-icon matListIcon>vpn_key</mat-icon> TSTT CITRIX</a>
+            <a mat-list-item href="https://ampliatt.sharepoint.com/:x:/s/AmpliaCommunicationLtd/ER3q_9JLATFLmDNBs0SSaEoB_vXMg2lwLiqkzzET7bMQWQ?e=4%3AQ6cJNt" target="_blank"><mat-icon matListIcon>description</mat-icon>ASK MY SUPERVISOR</a>
+          </mat-nav-list>
+        </div>
+      </div>  
+    </mat-card>
   </div>
-  <div fxLayout="row">
-    
-</div>
 
+  <!-- <div fxLayout="column" fxFlex="90%" fxLayoutAlign="center">
+    <div fxLayout="row" fxFlex="100%" fxLayoutAlign="center">
+      <button mat-button (click)="crm()">CRM</button>
+    </div>
+  </div>  -->
+</div>
+  
 
